--- a/MySqlManager/MySqlManager/Components/App.razor
+++ b/MySqlManager/MySqlManager/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="MySqlManager.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <title>MySqlManager</title>
     <HeadOutlet/>
 </head>
 
