design update, included catppuccin mocha color scheme

--- a/MySqlManager/MySqlManager/Components/App.razor
+++ b/MySqlManager/MySqlManager/Components/App.razor
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="catppuccin-mocha.css" />
     <link rel="stylesheet" href="app.css"/>
-    <link rel="stylesheet" href="MySqlManager.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <title>MySqlManager</title>
     <HeadOutlet/>
