--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using MySqlManager.Services
+@using MySqlManager.Dtos
 @inject MySqlManagerService MySqlManagerService
 
 <div class="top-row ps-3 navbar navbar-dark">
@@ -13,20 +14,44 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <i class="nf nf-fa-home"></i> &nbsp; Dashboard
+                <i class="nf nf-fa-home"></i> Dashboard
             </NavLink>
         </div>
-
-        <!--div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </!--div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div-->
+        
+        @if (_databaseList != null)
+        {
+            foreach (var item in _databaseList)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@($"/database/{item.Name}")">
+                        <i class="nf nf-fa-database"></i> @item.Name
+                    </NavLink>
+                    @foreach (var table in item.Tables)
+                    {
+                        <NavLink class="nav-link-sub" href="@($"/database/{item.Name}/browse/{table}")">
+                            @table
+                        </NavLink>
+                    }
+                </div>                
+            }
+        }
     </nav>
 </div>
+
+@code {
+
+    private List<DatabaseInformation>? _databaseList;
+    
+    protected override async Task OnInitializedAsync()
+    {
+        _databaseList = null;
+        await LoadDatabaseList();
+    }
+
+    private async Task LoadDatabaseList()
+    {
+        Console.WriteLine("Loading database list...");
+        _databaseList = await MySqlManagerService.GetDatabaseList();
+    }
+
+}
