--- a/MySqlManager/MySqlManager/wwwroot/css/app.css
+++ b/MySqlManager/MySqlManager/wwwroot/css/app.css
@@ -214,14 +214,41 @@ main {
     width: 100%;
 }
 
+.nav-item .nav-link-sub {
+    display:none;
+}
+
+.nav-item .nav-link.active ~ .nav-link-sub {
+    display:flex;
+    align-items: center;
+    background: none;
+    border: none;
+    border-radius: 4px;
+    height: 2rem;
+    color: var(--color-subtext0);
+    padding: .5rem 1rem;
+    text-decoration: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+.nav-item .nav-link.active ~ .nav-link-sub.active {
+    background-color: var(--color-accent2);
+    color: var(--color-text-dark);
+}
+
+.nav-item a i {
+    font-size:20px;
+    padding-right:10px;
+}
+
 .nav-item a.active {
     background-color: var(--color-accent2);
     color: var(--color-text-dark);
 }
 
 .nav-item .nav-link:hover {
-    background-color: var(--color-overlay1);
-    color: var(--color-text);
+    background-color: var(--color-accent1);
+    color: var(--color-text-dark);
 }
 
 .nav-scrollable {
