view table data, bootstrap update, design update

--- a/MySqlManager/MySqlManager/Components/App.razor
+++ b/MySqlManager/MySqlManager/Components/App.razor
@@ -16,6 +16,7 @@
 
 <body>
 <Routes/>
+<script src="bootstrap/bootstrap.bundle.min.js"></script>
 <script src="_framework/blazor.web.js"></script>
 </body>
 
