table view updates

--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -29,7 +29,7 @@
                     @foreach (var table in item.Tables)
                     {
                         <NavLink class="nav-link-sub" href="@($"/database/{item.Name}/browse/{table}")">
-                            @table
+                            <i class="nf nf-fa-list_ul"></i> @table
                         </NavLink>
                     }
                 </div>                
