--- a/MySqlManager/MySqlManager/Components/Layout/MainLayout.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/MainLayout.razor
@@ -1,23 +1,47 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+<CascadingValue Value="this">
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu/>
         </div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+        <main>
+            <div class="top-row px-4">
+                @TopRow
+            </div>
+
+            <article class="content px-4">
+                @Body
+            </article>
+        </main>
+    </div>
+</CascadingValue>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    private RenderFragment? TopRow { get; set; }
+
+    private void SetTopRow(RenderFragment content)
+    {
+        TopRow = content;
+        StateHasChanged();
+    }
+
+    public void SetTopRowForTableView(string? database, string? table)
+    {
+        SetTopRow(@<div class="container-fluid">
+            <ul class="list-unstyled d-flex flex-row align-items-center">
+                <li class=""><a class="" href="@($"/database/{database}/{table}")">Browse</a></li>
+                <li class=""><a class="" href="@($"/database/{database}/{table}/sql")">SQL</a></li>
+                <li class=""><a class="" href="@($"/database/{database}/{table}/search")">Search</a></li>
+                <li class=""><a class="" href="@($"/database/{database}/{table}/insert")">Insert</a></li>
+            </ul>
+        </div>);
+    }
+}
