--- a/MySqlManager/MySqlManager/Components/Pages/DatabaseOverview.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/DatabaseOverview.razor
@@ -10,6 +10,6 @@ Parameter: @Database
 @code {
 
     [Parameter]
-    public string Database { get; set; }
+    public string? Database { get; set; }
 
 }
