--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -28,8 +28,8 @@
                     </NavLink>
                     @foreach (var table in item.Tables)
                     {
-                        <NavLink class="nav-link-sub" href="@($"/database/{item.Name}/{table}")">
-                            <i class="nf nf-fa-list_ul"></i> @table
+                        <NavLink class="nav-link-sub" href="@($"/database/{item.Name}/{table.Name}")">
+                            <i class="nf nf-fa-list_ul"></i> @table.Name
                         </NavLink>
                     }
                 </div>                
@@ -51,7 +51,7 @@
     private async Task LoadDatabaseList()
     {
         Console.WriteLine("Loading database list...");
-        _databaseList = await MySqlManagerService.GetDatabaseList();
+        _databaseList = await MySqlManagerService.GetDatabaseList(false);
     }
 
 }
