--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
@@ -19,7 +19,7 @@ Parameter: @Database / @Table
     
     protected override void OnInitialized()
     {
-        Layout?.SetTopRowForTableView(Database, Table);
+        Layout?.SetTopRowForTableView(Database, Table, "search");
     }
 
 }
