--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
@@ -66,7 +66,7 @@ Parameter: @Database / @Table
     protected override void OnInitialized()
     {
         _runSqlResult = null;
-        Layout?.SetTopRowForTableView(Database, Table);
+        Layout?.SetTopRowForTableView(Database, Table, "sql");
     }
 
     private async Task PressGo()
