load connection string in settings service and show configuration view if not configured yet

--- a/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
+++ b/MySqlManager/MySqlManager/Components/Layout/NavMenu.razor
@@ -50,8 +50,11 @@
 
     private async Task LoadDatabaseList()
     {
-        Console.WriteLine("Loading database list...");
-        _databaseList = await MySqlManagerService.GetDatabaseList(false);
+        if (await MySqlManagerService.IsConnectionPossible())
+        {
+            Console.WriteLine("Loading database list...");
+            _databaseList = await MySqlManagerService.GetDatabaseList(false);
+        }
     }
 
 }
