--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableInsert.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableInsert.razor
@@ -1,4 +1,4 @@
-@page "/database/{Database}/{Table}/insert"
+@page "/database/{Database}/table/{Table}/insert"
 @using System.Runtime.InteropServices
 @using MySqlManager.Components.Layout
 @using MySqlManager.Services
