--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableOverview.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableOverview.razor
@@ -1,4 +1,4 @@
-@page "/database/{Database}/{Table}"
+@page "/database/{Database}/table/{Table}"
 @using System.Runtime.InteropServices
 @using MySqlManager.Components.Layout
 @using MySqlManager.Services
