--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSearch.razor
@@ -1,4 +1,4 @@
-@page "/database/{Database}/{Table}/search"
+@page "/database/{Database}/table/{Table}/search"
 @using System.Runtime.InteropServices
 @using MySqlManager.Components.Layout
 @using MySqlManager.Services
