--- a/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
+++ b/MySqlManager/MySqlManager/Components/Pages/Table/TableSql.razor
@@ -1,4 +1,4 @@
-@page "/database/{Database}/{Table}/sql"
+@page "/database/{Database}/table/{Table}/sql"
 @using System.Data
 @using MySqlManager.Components.Layout
 @using MySqlManager.Dtos
