--- a/MySqlManager/MySqlManager/Components/App.razor
+++ b/MySqlManager/MySqlManager/Components/App.razor
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="css/webfont.css" />
     <link rel="stylesheet" href="css/catppuccin-mocha.css" />
     <link rel="stylesheet" href="css/app.css"/>
@@ -16,7 +17,10 @@
 
 <body>
 <Routes/>
+<script src="jquery/jquery-3.7.1.min.js"></script>
 <script src="bootstrap/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/i18n/defaults-*.min.js"></script>
 <script src="_framework/blazor.web.js"></script>
 </body>
 
